sticked the sidebar and fixed some overflow issues

--- a/stockapi-web/src/App.css
+++ b/stockapi-web/src/App.css
@@ -17,7 +17,7 @@
 .body-wrapper{
   display: flex;
   flex-direction: row;
-  height: 100%;
+  height: calc(100vh - 64px);
   background-color: #F5F5F5;
 
 }
