--- a/stockapi-web/src/Components/SideBar/sideBar.css
+++ b/stockapi-web/src/Components/SideBar/sideBar.css
@@ -1,6 +1,7 @@
 .side-bar{
     transition: 0.25s width;
     width: 100%;
-    /* height: 100%; */
     background-color: #D9D9D9;
+    height: calc(100vh - 64px);
+    position: sticky;
 }
